// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilmCounter component FilmCounter component shows correctly with 1 movie 1`] = `
<span>
  1
   
  movie
   found
</span>
`;

exports[`FilmCounter component FilmCounter component shows correctly with many movies 1`] = `
<span>
  2
   
  movies
   found
</span>
`;
